# squzy

./: .bazelrc  .cobra.yaml  .codecov.yml  .gitignore  .golangci.yml  .squzy.yaml  BUILD  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  WORKSPACE  build.bash  go.mod  go.sum  main.go  repositories.bzl  setup.sh
.github/: FUNDING.yml
apps/agent_client/: BUILD.bazel  README.md  main.go
apps/agent_client/application/: BUILD.bazel  application.go  application_test.go
apps/agent_client/config/: BUILD.bazel  config.go  config_test.go
apps/agent_client/version/: BUILD.bazel  version_test.go
apps/server/: BUILD.bazel  main.go
apps/server/application/: BUILD.bazel  application.go  application_test.go
apps/server/config/: BUILD.bazel  config.go  config_test.go
apps/server/postgres_connection/: postgres_connection.go
apps/server/server/: server.go
apps/server/structures/: meta_data.go  stat_request.go
apps/server/version/: BUILD.bazel
apps/squzy/: BUILD.bazel  application.go  application_test.go  config.go  config_test.go  main.go  main_test.go
apps/squzy/application/: BUILD.bazel  application.go  application_test.go
apps/squzy/config/: BUILD.bazel  config.go  config_test.go
apps/squzy/server/: BUILD.bazel  server.go  server_test.go
apps/squzy/storage/: BUILD.bazel  external_storage.go  external_storage_test.go
apps/squzy/version/: BUILD.bazel  version.go  version_test.go
apps/squzy_agent_server/: BUILD.bazel  README.md  main.go
apps/squzy_agent_server/application/: BUILD.bazel  application.go  application_test.go
apps/squzy_agent_server/config/: BUILD.bazel  config.go  config_test.go
apps/squzy_agent_server/database/: BUILD.bazel  database.go  database_test.go
apps/squzy_agent_server/server/: BUILD.bazel  server.go  server_test.go
apps/squzy_agent_server/version/: BUILD.bazel  version.go
apps/squzy_api/: BUILD.bazel  README.md  main.go
apps/squzy_api/config/: BUILD.bazel  config.go  config_test.go
apps/squzy_api/handlers/: BUILD.bazel  handlers.go  handlers_test.go
apps/squzy_api/router/: BUILD.bazel  router.go  router_test.go
apps/squzy_api/version/: BUILD.bazel
apps/squzy_application_monitoring/: BUILD.bazel  README.md  main.go
apps/squzy_application_monitoring/application/: BUILD.bazel  application.go  application_test.go
apps/squzy_application_monitoring/config/: BUILD.bazel  config.go  config_test.go
apps/squzy_application_monitoring/database/: BUILD.bazel  database.go  database_test.go
apps/squzy_application_monitoring/server/: BUILD.bazel  server.go  server_test.go
apps/squzy_application_monitoring/version/: BUILD.bazel  version.go
apps/squzy_incident/: BUILD.bazel  README.md  main.go
apps/squzy_incident/application/: BUILD.bazel  application.go  application_test.go
apps/squzy_incident/config/: BUILD.bazel  config.go  config_test.go
apps/squzy_incident/database/: BUILD.bazel  database.go  database_test.go
apps/squzy_incident/expression/: BUILD.bazel  agent.go  agent_test.go  application.go  application_test.go  expression.go  expression_test.go  snapshot.go  snapshot_test.go  transaction.go  transaction_test.go
apps/squzy_incident/server/: BUILD.bazel  server.go  server_test.go
apps/squzy_incident/storage_client/: storage_client.go
apps/squzy_incident/version/: BUILD.bazel  version.go
apps/squzy_monitoring/: BUILD.bazel  README.md  main.go
apps/squzy_monitoring/application/: BUILD.bazel  application.go  application_test.go
apps/squzy_monitoring/config/: BUILD.bazel  config.go  config_test.go
apps/squzy_monitoring/server/: BUILD.bazel  server.go  server_test.go
apps/squzy_monitoring/version/: BUILD.bazel  version.go
apps/squzy_notification/: BUILD.bazel  README.md  main.go
apps/squzy_notification/application/: BUILD.bazel  application.go  application_test.go
apps/squzy_notification/config/: BUILD.bazel  config.go  config_test.go
apps/squzy_notification/database/: BUILD.bazel  notification.go  notification_methods.go  notification_test.go
apps/squzy_notification/integrations/: BUILD.bazel  integrations.go  integrations_test.go
apps/squzy_notification/server/: BUILD.bazel  server.go  server_test.go
apps/squzy_notification/version/: BUILD.bazel  version.go
apps/squzy_storage/: .env.yaml  BUILD.bazel  README.md  main.go
internal/agent/: BUILD.bazel  agent.go  agent_test.go
internal/agent-executor/: BUILD.bazel  agent_executor.go  agent_executor_test.go
internal/cache/: BUILD.bazel  cache.go  cache_test.go
internal/cassandra-tools/: BUILD.bazel  cassandraTools.go  cassandraTools_test.go
internal/database/: BUILD.bazel  convertion.go  convertion_test.go  database.go  database_test.go  postgres.go  postgres_test.go
internal/grpctools/: BUILD.bazel  grpctools.go  grpctools_test.go
internal/helpers/: BUILD.bazel  helpers.go  helpers_test.go
internal/httpTools/: BUILD.bazel  httpTools.go
internal/httptools/: BUILD.bazel  httptools.go  httptools_test.go
internal/job/: BUILD.bazel  job.go  job_cassandra.go  job_cassandra_test.go  job_grpc.go  job_grpc_test.go  job_html_http_value.go  job_http.go  job_http_test.go  job_json_http_value.go  job_json_http_value_test.go  job_mongo.go  job_mongo_test.go  job_mysql.go  job_mysql_test.go  job_postgres.go  job_postgres_test.go  job_sitemap.go  job_sitemap_test.go  job_ssl.go  job_ssl_test.go  job_tcp.go  job_tcp_test.go
internal/job-executor/: BUILD.bazel  executor.go  executor_test.go
internal/logger/: BUILD.bazel  logger.go
internal/mongo/: BUILD.bazel  mongo.go  mongo_test.go
internal/parsers/: BUILD.bazel  invalid.xml  sitemap.go  sitemap_test.go  valid.xml
internal/scheduler/: BUILD.bazel  scheduler.go  scheduler_test.go
internal/scheduler-config-storage/: BUILD.bazel  storage.go  storage_test.go
internal/scheduler-storage/: BUILD.bazel  scheduler-storage.go  scheduler-storage_test.go
internal/semaphore/: BUILD.bazel
internal/sitemap-storage/: BUILD.bazel  sitemap-storage.go  sitemap-storage_test.go
internal/storage/: BUILD.bazel  external_storage.go  external_storage_test.go  storage.go  storage_test.go
(+151 files in other folders)
