load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "agent",
    srcs = [
        "main.go",
    ],
    importpath = "squzy/apps/agent",
    deps = [
        "@com_github_shirou_gopsutil//cpu:go_default_library",
        "@com_github_shirou_gopsutil//disk:go_default_library",
        "@com_github_shirou_gopsutil//host:go_default_library",
        "@com_github_shirou_gopsutil//net:go_default_library",
        "@com_github_shirou_gopsutil//mem:go_default_library",
        "//apps/agent/config:config",
         "//apps/agent/version:version",
        "//apps/internal/agent:agent",
        "//apps/agent/application:application",
        "@com_github_golang_protobuf//ptypes:go_default_library",
        "@com_github_golang_protobuf//ptypes/timestamp:go_default_library",
        "//apps/internal/agent-executor:agent-executor",
        "//apps/internal/grpcTools:grpcTools",
    ]
)

go_binary(
    name = "squzy_agent_app",
    embed = [":agent"],
)