load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "agent_client_lib",
    srcs = ["main.go"],
    importpath = "github.com/squzy/squzy/apps/agent_client",
    visibility = ["//visibility:private"],
    deps = [
        "//apps/agent_client/application",
        "//apps/agent_client/config",
        "//apps/agent_client/version",
        "//internal/agent",
        "//internal/agent-executor",
        "//internal/logger",
        "@com_github_shirou_gopsutil_v3//cpu",
        "@com_github_shirou_gopsutil_v3//disk",
        "@com_github_shirou_gopsutil_v3//host",
        "@com_github_shirou_gopsutil_v3//mem",
        "@com_github_shirou_gopsutil_v3//net",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_binary(
    name = "agent_client",
    embed = [":agent_client_lib"],
    visibility = ["//visibility:public"],
)
