load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

go_library(
    name = "squzy_server",
    srcs = [
        "main.go",
    ],
    importpath = "squzy/apps/server",
    deps = [
        "//apps/server/application:application",
        "//apps/server/config:config",
        "//apps/internal/database:database",
        "//apps/server/version:version",
    ]
)

go_binary(
    name = "squzy_server_app",
    embed = [":squzy_server"],
    x_defs = {"squzy/apps/server/version.Version": "{VERSION}"},
)

go_image(
    name = "image",
    binary = ":squzy_server_app",
)

container_image(
    name = "squzy_server_image",
    base = ":image",
)

container_push(
    name = "squzy_server_push",
    format = "Docker",
    image = ":squzy_server_image",
    registry = "docker.pkg.github.com",
    repository = "squzy/squzy/squzy_server_app",
)

container_push(
    name = "squzy_push_hub",
    format = "Docker",
    image = ":squzy_server_image",
    registry = "index.docker.io",
    repository = "squzy/squzy_server_app",
    tag = "$(version)"
)

container_push(
    name = "squzy_push_hub_ci",
    format = "Docker",
    image = ":squzy_server_image",
    registry = "index.docker.io",
    repository = "squzy/squzy_server_app",
    tag = "$(version)"
)