load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

go_library(
    name = "squzy_agent_server_src",
    srcs = [
        "main.go",
    ],
    importpath = "squzy/apps/agent_server",
    deps = [
        "@com_github_squzy_mongo_helper//:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo/options:go_default_library",
        "@com_github_squzy_squzy_generated//generated/proto/v1:go_default_library",
        "//internal/helpers:helpers",
        "//apps/squzy_agent_server/application:application",
        "//apps/squzy_agent_server/server:server",
        "//apps/squzy_agent_server/database:database",
        "//apps/squzy_agent_server/version:version",
        "//apps/squzy_agent_server/config:config",
    ]
)

go_binary(
    name = "squzy_agent_server",
    embed = [":squzy_agent_server_src"],
    x_defs = {"squzy/apps/squzy_agent_server/version.Version": "{VERSION}"},
)

go_image(
    name = "squzy_agent_server_image",
    binary = ":squzy_agent_server",
)

container_image(
    name = "squzy_agent_server_container_image",
    base = ":squzy_agent_server_image",
)

container_push(
    name = "squzy_push_hub",
    format = "Docker",
    image = ":squzy_agent_server_container_image",
    registry = "index.docker.io",
    repository = "squzy/squzy_agent_server",
    tag = "$(version)"
)

container_push(
    name = "squzy_push_hub_ci",
    format = "Docker",
    image = ":squzy_agent_server_container_image",
    registry = "index.docker.io",
    repository = "squzy/squzy_agent_server",
    tag = "$(version)"
)