load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
    ],
    importpath = "squzy/apps/agent_server",
    deps = [
		"@org_mongodb_go_mongo_driver//bson/primitive:go_default_library",
		"@org_mongodb_go_mongo_driver//bson:go_default_library",
		"@com_github_golang_protobuf//ptypes/timestamp:go_default_library",
		"@com_github_golang_protobuf//ptypes:go_default_library",
        "@com_github_squzy_mongo_helper//:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo/options:go_default_library",
        "@com_github_squzy_squzy_generated//generated/proto/v1:go_default_library",
        "//internal/helpers:go_default_library",
         "//internal/grpctools:go_default_library",
        "//apps/squzy_agent_server/application:go_default_library",
        "//apps/squzy_agent_server/server:go_default_library",
        "//apps/squzy_agent_server/database:go_default_library",
        "//apps/squzy_agent_server/version:go_default_library",
        "//apps/squzy_agent_server/config:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ]
)

go_binary(
    name = "squzy_agent_server",
    embed = [":go_default_library"],
    x_defs = {"squzy/apps/squzy_agent_server/version.Version": "{VERSION}"},
)

go_image(
    name = "squzy_agent_server_image",
    binary = ":squzy_agent_server",
)

container_image(
    name = "squzy_agent_server_container_image",
    base = ":squzy_agent_server_image",
)

container_push(
    name = "squzy_push_hub",
    format = "Docker",
    image = ":squzy_agent_server_container_image",
    registry = "index.docker.io",
    repository = "squzy/squzy_agent_server",
    tag = "$(version)"
)

container_push(
    name = "squzy_push_hub_ci",
    format = "Docker",
    image = ":squzy_agent_server_container_image",
    registry = "index.docker.io",
    repository = "squzy/squzy_agent_server",
    tag = "$(version)"
)