load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "squzy_agent_server_lib",
    srcs = ["main.go"],
    importpath = "github.com/squzy/squzy/apps/squzy_agent_server",
    visibility = ["//visibility:private"],
    deps = [
        "//apps/squzy_agent_server/application",
        "//apps/squzy_agent_server/config",
        "//apps/squzy_agent_server/database",
        "//apps/squzy_agent_server/server",
        "//apps/squzy_agent_server/version",
        "//internal/grpctools",
        "//internal/helpers",
        "//internal/logger",
        "@com_github_squzy_mongo_helper//:mongo_helper",
        "@com_github_squzy_squzy_generated//generated/github.com/squzy/squzy_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_mongodb_go_mongo_driver//bson",
        "@org_mongodb_go_mongo_driver//bson/primitive",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
    ],
)

go_binary(
    name = "squzy_agent_server",
    embed = [":squzy_agent_server_lib"],
    visibility = ["//visibility:public"],
)
