load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
    ],
    importpath = "squzy/apps/squzy_api",
    deps = [
        "//apps/squzy_api/config:go_default_library",
        "//apps/squzy_api/version:go_default_library",
        "//apps/squzy_api/router:go_default_library",
        "//apps/squzy_api/handlers:go_default_library",
        "//internal/grpctools:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
        "@com_github_squzy_mongo_helper//:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo/options:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@com_github_squzy_squzy_generated//generated/proto/v1:go_default_library",
    ]
)

go_binary(
    name = "squzy_api",
    embed = [":go_default_library"],
    x_defs = {"squzy/apps/squzy_api/version.Version": "{VERSION}"},
)

go_image(
    name = "squzy_api_image",
    binary = ":squzy_api",
)

container_image(
    name = "squzy_api_container_image",
    base = ":squzy_api_image",
)

container_push(
    name = "squzy_push_hub",
    format = "Docker",
    image = ":squzy_api_container_image",
    registry = "index.docker.io",
    repository = "squzy/squzy_api",
    tag = "$(version)"
)

container_push(
    name = "squzy_push_hub_ci",
    format = "Docker",
    image = ":squzy_api_container_image",
    registry = "index.docker.io",
    repository = "squzy/squzy_api",
    tag = "$(version)"
)