load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "squzy_api_lib",
    srcs = ["main.go"],
    importpath = "github.com/squzy/squzy/apps/squzy_api",
    visibility = ["//visibility:private"],
    deps = [
        "//apps/squzy_api/config",
        "//apps/squzy_api/handlers",
        "//apps/squzy_api/router",
        "//apps/squzy_api/version",
        "//internal/grpctools",
        "//internal/logger",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_squzy_squzy_generated//generated/proto/v1:proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "squzy_api",
    embed = [":squzy_api_lib"],
    visibility = ["//visibility:public"],
)
