load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "squzy_api_lib",
    srcs = ["main.go"],
    importpath = "github.com/squzy/squzy/apps/squzy_api",
    visibility = ["//visibility:private"],
    deps = [
        "//apps/squzy_api/config",
        "//apps/squzy_api/handlers",
        "//apps/squzy_api/router",
        "//apps/squzy_api/version",
        "//internal/grpctools",
        "//internal/logger",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_squzy_squzy_generated//generated/github.com/squzy/squzy_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "squzy_api",
    embed = [":squzy_api_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "squzy_api_image",
    binary = ":squzy_api",
)

container_image(
    name = "squzy_api_container_image",
    base = ":squzy_api_image",
)

container_push(
    name = "squzy_push_hub",
    format = "Docker",
    image = ":squzy_api_container_image",
    registry = "index.docker.io",
    repository = "squzy/squzy_api",
    tag = "$(version)",
)

container_push(
    name = "squzy_push_hub_ci",
    format = "Docker",
    image = ":squzy_api_container_image",
    registry = "index.docker.io",
    repository = "squzy/squzy_api",
    tag = "$(version)",
)
