load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
    ],
    importpath = "squzy/apps/squzy_application_monitoring",
    deps = [
		"@org_mongodb_go_mongo_driver//bson/primitive:go_default_library",
		"@org_mongodb_go_mongo_driver//bson:go_default_library",
		"@com_github_golang_protobuf//ptypes/timestamp:go_default_library",
		"@com_github_golang_protobuf//ptypes:go_default_library",
        "@com_github_squzy_mongo_helper//:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo/options:go_default_library",
        "@com_github_squzy_squzy_generated//generated/proto/v1:go_default_library",
        "//internal/logger:go_default_library",
        "//internal/helpers:go_default_library",
        "//internal/grpctools:go_default_library",
        "//apps/squzy_application_monitoring/application:go_default_library",
        "//apps/squzy_application_monitoring/server:go_default_library",
        "//apps/squzy_application_monitoring/database:go_default_library",
        "//apps/squzy_application_monitoring/version:go_default_library",
        "//apps/squzy_application_monitoring/config:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ]
)

go_binary(
    name = "squzy_application_monitoring",
    embed = [":go_default_library"],
    x_defs = {"squzy/apps/squzy_application_monitoring/version.Version": "{VERSION}"},
)

go_image(
    name = "squzy_application_monitoring_image",
    binary = ":squzy_application_monitoring",
)

container_image(
    name = "squzy_application_monitoring_container_image",
    base = ":squzy_application_monitoring_image",
)

container_push(
    name = "squzy_push_hub",
    format = "Docker",
    image = ":squzy_application_monitoring_container_image",
    registry = "index.docker.io",
    repository = "squzy/squzy_application_monitoring",
    tag = "$(version)"
)

container_push(
    name = "squzy_push_hub_ci",
    format = "Docker",
    image = ":squzy_application_monitoring_container_image",
    registry = "index.docker.io",
    repository = "squzy/squzy_application_monitoring",
    tag = "$(version)"
)