load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

go_library(
    name = "squzy_application_monitoring_lib",
    srcs = ["main.go"],
    importpath = "github.com/squzy/squzy/apps/squzy_application_monitoring",
    visibility = ["//visibility:private"],
    deps = [
        "//apps/squzy_application_monitoring/application",
        "//apps/squzy_application_monitoring/config",
        "//apps/squzy_application_monitoring/database",
        "//apps/squzy_application_monitoring/server",
        "//apps/squzy_application_monitoring/version",
        "//internal/grpctools",
        "//internal/helpers",
        "//internal/logger",
        "@com_github_squzy_mongo_helper//:mongo_helper",
        "@com_github_squzy_squzy_generated//generated/github.com/squzy/squzy_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
    ],
)

go_binary(
    name = "squzy_application_monitoring",
    embed = [":squzy_application_monitoring_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "squzy_application_monitoring_image",
    binary = ":squzy_application_monitoring",
)

container_image(
    name = "squzy_application_monitoring_container_image",
    base = ":squzy_application_monitoring_image",
)

container_push(
    name = "squzy_push_hub",
    format = "Docker",
    image = ":squzy_application_monitoring_container_image",
    registry = "index.docker.io",
    repository = "squzy/squzy_application_monitoring",
    tag = "$(version)",
)

container_push(
    name = "squzy_push_hub_ci",
    format = "Docker",
    image = ":squzy_application_monitoring_container_image",
    registry = "index.docker.io",
    repository = "squzy/squzy_application_monitoring",
    tag = "$(version)",
)
