load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "squzy_incident_lib",
    srcs = ["main.go"],
    importpath = "github.com/squzy/squzy/apps/squzy_incident",
    visibility = ["//visibility:private"],
    deps = [
        "//apps/squzy_incident/application",
        "//apps/squzy_incident/config",
        "//apps/squzy_incident/database",
        "//apps/squzy_incident/server",
        "//apps/squzy_incident/version",
        "//internal/grpctools",
        "//internal/helpers",
        "//internal/logger",
        "@com_github_squzy_mongo_helper//:mongo_helper",
        "@com_github_squzy_squzy_generated//generated/github.com/squzy/squzy_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
    ],
)

go_binary(
    name = "squzy_incident",
    embed = [":squzy_incident_lib"],
    visibility = ["//visibility:public"],
)
