load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
    ],
    importpath = "squzy/apps/squzy_monitoring",
    deps = [
        "//apps/squzy_monitoring/application:go_default_library",
        "//apps/squzy_monitoring/config:go_default_library",
        "//apps/squzy_monitoring/version:go_default_library",
        "//apps/squzy_monitoring/server:go_default_library",
        "//internal/job:go_default_library",
        "//internal/semaphore:go_default_library",
        "//internal/scheduler:go_default_library",
        "//internal/scheduler-config-storage:go_default_library",
        "//internal/sitemap-storage:go_default_library",
        "//internal/storage:go_default_library",
        "//internal/httpTools:go_default_library",
        "//internal/grpcTools:go_default_library",
        "//internal/parsers:go_default_library",
        "//internal/helpers:go_default_library",
        "//internal/scheduler-storage:go_default_library",
        "//internal/job-executor:go_default_library",
        "@com_github_squzy_mongo_helper//:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo/options:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@com_github_squzy_squzy_generated//generated/proto/v1:go_default_library",
    ]
)

go_binary(
    name = "squzy_monitoring",
    embed = [":go_default_library"],
    x_defs = {"squzy/apps/squzy_monitoring/version.Version": "{VERSION}"},
)

go_image(
    name = "squzy_monitoring_image",
    binary = ":squzy_monitoring",
)

container_image(
    name = "squzy_monitoring_container_image",
    base = ":squzy_monitoring_image",
)

container_push(
    name = "squzy_push_hub",
    format = "Docker",
    image = ":squzy_monitoring_container_image",
    registry = "index.docker.io",
    repository = "squzy/squzy_monitoring",
    tag = "$(version)"
)

container_push(
    name = "squzy_push_hub_ci",
    format = "Docker",
    image = ":squzy_monitoring_container_image",
    registry = "index.docker.io",
    repository = "squzy/squzy_monitoring",
    tag = "$(version)"
)