load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "squzy_monitoring_lib",
    srcs = ["main.go"],
    importpath = "github.com/squzy/squzy/apps/squzy_monitoring",
    visibility = ["//visibility:private"],
    deps = [
        "//apps/squzy_monitoring/application",
        "//apps/squzy_monitoring/config",
        "//apps/squzy_monitoring/version",
        "//internal/grpctools",
        "//internal/helpers",
        "//internal/httptools",
        "//internal/job",
        "//internal/job-executor",
        "//internal/logger",
        "//internal/parsers",
        "//internal/scheduler-config-storage",
        "//internal/scheduler-storage",
        "//internal/semaphore",
        "//internal/sitemap-storage",
        "//internal/storage",
        "@com_github_squzy_mongo_helper//:mongo_helper",
        "@org_golang_google_grpc//:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
    ],
)

go_binary(
    name = "squzy_monitoring",
    embed = [":squzy_monitoring_lib"],
    visibility = ["//visibility:public"],
)
