load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

go_library(
    name = "squzy_monitoring_lib",
    srcs = ["main.go"],
    importpath = "github.com/squzy/squzy/apps/squzy_monitoring",
    visibility = ["//visibility:private"],
    deps = [
        "//apps/squzy_monitoring/application",
        "//apps/squzy_monitoring/config",
        "//apps/squzy_monitoring/version",
        "//internal/grpctools",
        "//internal/helpers",
        "//internal/httptools",
        "//internal/job",
        "//internal/job-executor",
        "//internal/logger",
        "//internal/parsers",
        "//internal/scheduler-config-storage",
        "//internal/scheduler-storage",
        "//internal/semaphore",
        "//internal/sitemap-storage",
        "//internal/storage",
        "@com_github_squzy_mongo_helper//:mongo_helper",
        "@org_golang_google_grpc//:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
    ],
)

go_binary(
    name = "squzy_monitoring",
    embed = [":squzy_monitoring_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "squzy_monitoring_image",
    binary = ":squzy_monitoring",
)

container_image(
    name = "squzy_monitoring_container_image",
    base = ":squzy_monitoring_image",
)

container_push(
    name = "squzy_push_hub",
    format = "Docker",
    image = ":squzy_monitoring_container_image",
    registry = "index.docker.io",
    repository = "squzy/squzy_monitoring",
    tag = "$(version)",
)

container_push(
    name = "squzy_push_hub_ci",
    format = "Docker",
    image = ":squzy_monitoring_container_image",
    registry = "index.docker.io",
    repository = "squzy/squzy_monitoring",
    tag = "$(version)",
)
