load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
    ],
    importpath = "squzy/apps/squzy_notification",
    deps = [
		"@org_mongodb_go_mongo_driver//bson/primitive:go_default_library",
		"@org_mongodb_go_mongo_driver//bson:go_default_library",
		"@com_github_golang_protobuf//ptypes/timestamp:go_default_library",
		"@com_github_golang_protobuf//ptypes:go_default_library",
        "@com_github_squzy_mongo_helper//:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo/options:go_default_library",
        "@com_github_squzy_squzy_generated//generated/proto/v1:go_default_library",
        "//internal/helpers:go_default_library",
        "//internal/grpctools:go_default_library",
        "//internal/httptools:go_default_library",
        "//apps/squzy_notification/application:go_default_library",
        "//apps/squzy_notification/server:go_default_library",
        "//apps/squzy_notification/database:go_default_library",
        "//apps/squzy_notification/version:go_default_library",
        "//apps/squzy_notification/config:go_default_library",
        "//apps/squzy_notification/integrations:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ]
)

go_binary(
    name = "squzy_notification",
    embed = [":go_default_library"],
    x_defs = {"squzy/apps/squzy_notification/version.Version": "{VERSION}"},
)

go_image(
    name = "squzy_notification_image",
    binary = ":squzy_notification",
)

container_image(
    name = "squzy_notification_container_image",
    base = ":squzy_notification_image",
)

container_push(
    name = "squzy_push_hub",
    format = "Docker",
    image = ":squzy_notification_container_image",
    registry = "index.docker.io",
    repository = "squzy/squzy_notification",
    tag = "$(version)"
)

container_push(
    name = "squzy_push_hub_ci",
    format = "Docker",
    image = ":squzy_notification_container_image",
    registry = "index.docker.io",
    repository = "squzy/squzy_notification",
    tag = "$(version)"
)