load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "squzy_notification_lib",
    srcs = ["main.go"],
    importpath = "github.com/squzy/squzy/apps/squzy_notification",
    visibility = ["//visibility:private"],
    deps = [
        "//apps/squzy_notification/application",
        "//apps/squzy_notification/config",
        "//apps/squzy_notification/database",
        "//apps/squzy_notification/integrations",
        "//apps/squzy_notification/server",
        "//apps/squzy_notification/version",
        "//internal/grpctools",
        "//internal/helpers",
        "//internal/httptools",
        "//internal/logger",
        "@com_github_squzy_mongo_helper//:mongo_helper",
        "@com_github_squzy_squzy_generated//generated/github.com/squzy/squzy_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
    ],
)

go_binary(
    name = "squzy_notification",
    embed = [":squzy_notification_lib"],
    visibility = ["//visibility:public"],
)
