load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "squzy_storage_lib",
    srcs = ["main.go"],
    importpath = "github.com/squzy/squzy/apps/squzy_storage",
    visibility = ["//visibility:private"],
    deps = [
        "//apps/squzy_storage/application",
        "//apps/squzy_storage/config",
        "//apps/squzy_storage/server",
        "//apps/squzy_storage/version",
        "//internal/database",
        "//internal/grpctools",
        "//internal/logger",
        "@com_github_jinzhu_gorm//:gorm",
        "@com_github_squzy_squzy_generated//generated/proto/v1:proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "squzy_storage",
    embed = [":squzy_storage_lib"],
    visibility = ["//visibility:public"],
)
