load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

go_library(
    name = "squzy_storage_lib",
    srcs = ["main.go"],
    importpath = "github.com/squzy/squzy/apps/squzy_storage",
    visibility = ["//visibility:private"],
    deps = [
        "//apps/squzy_storage/application",
        "//apps/squzy_storage/config",
        "//apps/squzy_storage/server",
        "//apps/squzy_storage/version",
        "//internal/database",
        "//internal/grpctools",
        "//internal/logger",
        "@com_github_clickhouse_clickhouse_go//:clickhouse-go",
        "@com_github_jinzhu_gorm//:gorm",
        "@com_github_squzy_squzy_generated//generated/github.com/squzy/squzy_proto",
        "@io_gorm_driver_postgres//:postgres",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "squzy_storage",
    embed = [":squzy_storage_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "squzy_storage_image",
    binary = ":squzy_storage",
)

container_image(
    name = "squzy_storage_container_image",
    base = ":squzy_storage_image",
)

container_push(
    name = "squzy_push_hub",
    format = "Docker",
    image = ":squzy_storage_container_image",
    registry = "index.docker.io",
    repository = "squzy/squzy_storage",
    tag = "$(version)",
)

container_push(
    name = "squzy_push_hub_ci",
    format = "Docker",
    image = ":squzy_storage_container_image",
    registry = "index.docker.io",
    repository = "squzy/squzy_storage",
    tag = "$(version)",
)
