load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "agent-executor",
    srcs = ["agent_executor.go"],
    importpath = "github.com/squzy/squzy/internal/agent-executor",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/agent",
        "@com_github_squzy_squzy_generated//generated/proto/v1:proto",
    ],
)

go_test(
    name = "agent-executor_test",
    srcs = ["agent_executor_test.go"],
    embed = [":agent-executor"],
    deps = [
        "@com_github_squzy_squzy_generated//generated/proto/v1:proto",
        "@com_github_stretchr_testify//assert",
    ],
)
